All tests implemented