@@ -4,6 +4,7 @@ import com.example.events.dto.TypeDTO;
 import com.example.events.entity.Event;
 import com.example.events.entity.Type;
 import com.example.events.exception.GlobalExceptionHandler;
+import com.example.events.exception.ResourceNotFoundException;
 import com.example.events.service.TypeService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -20,7 +21,9 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
-import static org.mockito.Mockito.*;
+import static org.hamcrest.Matchers.containsString;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -41,7 +44,16 @@ class TypeControllerTest {
 
     @BeforeEach
     void setUp() {
-        testTypeDTO = new TypeDTO(UUID.randomUUID(), 99.99, "10km", "00:45:00", UUID.randomUUID());
+        mockMvc = MockMvcBuilders.standaloneSetup(typeController)
+                .setControllerAdvice(new GlobalExceptionHandler())
+                .build();
+
+        objectMapper = new ObjectMapper();
+
+        testEventId = UUID.randomUUID();
+
+        testTypeDTO = new TypeDTO(UUID.randomUUID(), 99.99, "10km", "00:45:00", testEventId);
+
         testType = new Type();
         testType.setId(testTypeDTO.getId());
         testType.setPrice(testTypeDTO.getPrice());
@@ -49,10 +61,9 @@ class TypeControllerTest {
         testType.setResults(testTypeDTO.getResults());
 
         Event event = new Event();
-        event.setId(testTypeDTO.getEventId());
+        event.setId(testEventId);
         testType.setEvent(event);
     }
-
 
     @Test
     void createType_ShouldReturnCreatedType() throws Exception {
@@ -62,16 +73,19 @@ class TypeControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(testTypeDTO)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("VIP"));
+                .andExpect(jsonPath("$.distance").value("10km"))
+                .andExpect(jsonPath("$.results").value("00:45:00"))
+                .andExpect(jsonPath("$.price").value(99.99))
+                .andExpect(jsonPath("$.event.id").value(testEventId.toString()));
     }
 
     @Test
     void getAllTypes_ShouldReturnTypes() throws Exception {
-        when(typeService.getAllTypes()).thenReturn(List.of(testType));
+        when(typeService.getAllTypes()).thenReturn(Collections.singletonList(testType));
 
         mockMvc.perform(get("/api/types"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].name").value("VIP"));
+                .andExpect(jsonPath("$[0].event.id").value(testEventId.toString()));
     }
 
     @Test
@@ -80,7 +94,18 @@ class TypeControllerTest {
 
         mockMvc.perform(get("/api/types/event/{eventId}", testEventId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].eventId").value(testEventId.toString()));
+                .andExpect(jsonPath("$[0].event.id").value(testEventId.toString()));
+    }
+
+    @Test
+    void getTypesByEventId_NotFound_ShouldReturn404() throws Exception {
+        UUID nonExistentId = UUID.randomUUID();
+        when(typeService.getTypesByEventId(nonExistentId))
+                .thenThrow(new ResourceNotFoundException("No types found for event"));
+
+        mockMvc.perform(get("/api/types/event/{eventId}", nonExistentId))
+                .andExpect(status().isNotFound())
+                .andExpect(content().string(containsString("No types found for event")));
     }
 
     @Test
@@ -91,17 +116,29 @@ class TypeControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(List.of(testTypeDTO))))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].name").value("VIP"));
+                .andExpect(jsonPath("$[0].event.id").value(testEventId.toString()));
     }
 
     @Test
     void getTypesByDistance_ShouldReturnFilteredTypes() throws Exception {
-        when(typeService.getTypesByEventIdAndMinDistance(testEventId, 10.0)).thenReturn(List.of(testType));
+        when(typeService.getTypesByEventIdAndMinDistance(eq(testEventId), eq(10.0))).thenReturn(List.of(testType));
 
         mockMvc.perform(get("/api/types/byDistance")
                         .param("eventId", testEventId.toString())
                         .param("minDistance", "10.0"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].eventId").value(testEventId.toString()));
+                .andExpect(jsonPath("$[0].event.id").value(testEventId.toString()));
+    }
+
+    @Test
+    void getTypesByDistance_NotFound_ShouldReturn404() throws Exception {
+        when(typeService.getTypesByEventIdAndMinDistance(eq(testEventId), eq(10.0)))
+                .thenThrow(new ResourceNotFoundException("No types found with given distance"));
+
+        mockMvc.perform(get("/api/types/byDistance")
+                        .param("eventId", testEventId.toString())
+                        .param("minDistance", "10.0"))
+                .andExpect(status().isNotFound())
+                .andExpect(content().string(containsString("No types found with given distance")));
     }
 }
